--- a/trunk/099/pkg/skills/craftingskills/tinkering/menu.cfg
+++ b/trunk/099/pkg/skills/craftingskills/tinkering/menu.cfg
@@ -15,8 +15,9 @@ item metalmenu
 	Submenu	0x1053	metalparts	Metal Parts
 	Submenu	0x14f5	metalmisc		Misc.
 	Entry	0x14FB	Lockpicks
-//	Entry	0x27ac	Shuriken
-//	Entry	0x2804	Darts
+	Entry	0x27ac	Shuriken
+	Entry	0x2804	Darts
+	Entry	0x255d	Throwing Axe
 }
 
 Item metaltools
