--- a/trunk/099/pkg/skills/craftingskills/tinkering/tinkering.cfg
+++ b/trunk/099/pkg/skills/craftingskills/tinkering/tinkering.cfg
@@ -2,10 +2,20 @@
 //  wood items
 ///////////////////
 
+tinkeritem 0x105b
+{
+	name			axle
+	material		2
+	type			wood
+	skill		20
+	stackable		1
+}
+
 tinkeritem 0x1030
 {
 	name			a jointing plane
 	material		4
+	type			wood
 	skill		30
 }
 
@@ -13,6 +23,7 @@ tinkeritem 0x102c
 {
 	name			a moulding plane
 	material		4
+	type			wood
 	skill		30
 }
 
@@ -20,6 +31,7 @@ tinkeritem 0x1032
 {
 	name			a smoothing plane
 	material		4
+	type			wood
 	skill		40
 }
 
@@ -27,6 +39,7 @@ tinkeritem 0x1428
 {
 	name			a dipping stick
 	material		4
+	type			wood
 	skill		30
 	stackable		1
 }
@@ -35,6 +48,7 @@ tinkeritem 0x15F8
 {
 	name			a wooden bowl
 	material		3
+	type			wood
 	skill		60
 }
 
@@ -49,6 +63,7 @@ tinkeritem 0x14f5
 {
 	name			a spyglass
 	material		5
+	type			metal
 	skill		100
 }
 
@@ -56,6 +71,7 @@ tinkeritem 0x09d4
 {
 	name			silverware
 	material		5
+	type			metal
 	skill		90
 }
 
@@ -63,6 +79,7 @@ tinkeritem 0x1003
 {
 	name			a spittoon
 	material		10
+	type			metal
 	skill		70
 }
 
@@ -70,6 +87,7 @@ tinkeritem 0x0a25
 {
 	name			a lantern
 	material		25
+	type			metal
 	skill		80
 }
 
@@ -77,6 +95,7 @@ tinkeritem 0x1053
 {
 	name			gears
 	material		2
+	type			metal
 	skill		40
 	stackable		1
 }
@@ -85,15 +104,8 @@ tinkeritem 0x1055
 {
 	name			hinge
 	material		2
+	type			metal
 	skill		30
-	stackable		1
-}
-
-tinkeritem 0x105b
-{
-	name			axle
-	material		2
-	skill		20
 	stackable		1
 }
 
@@ -101,6 +113,7 @@ tinkeritem 0x100e
 {
 	name			a copper key
 	material		2
+	type			metal
 	skill		40
 }
 
@@ -108,6 +121,7 @@ tinkeritem 0x100f
 {
 	name			a gold key
 	material		2
+	type			metal
 	skill		40
 }
 
@@ -115,6 +129,7 @@ tinkeritem 0x1010
 {
 	name			an iron key
 	material		2
+	type			metal
 	skill		40
 }
 
@@ -122,6 +137,7 @@ tinkeritem 0x1011
 {
 	name			a key ring
 	material		2
+	type			metal
 	skill		40
 }
 
@@ -129,6 +145,7 @@ tinkeritem 0x0f9e
 {
 	name			a pair of scissors
 	material		4
+	type			metal
 	skill		50
 }
 
@@ -136,6 +153,7 @@ tinkeritem 0x0f9d
 {
 	name			a sewing kit
 	material		2
+	type			metal
 	skill		30
 }
 
@@ -143,6 +161,7 @@ tinkeritem 0x0f39
 {
 	name			a shovel
 	material		4
+	type			metal
 	skill		30
 }
 
@@ -151,6 +170,7 @@ tinkeritem 0x105d
 	name			springs
 	material		2
 	skill		30
+	type			metal
 	stackable		1
 }
 
@@ -158,6 +178,7 @@ tinkeritem 0x0fbb
 {
 	name			a pair of tongs
 	material		4
+	type			metal
 	skill		50
 }
 
@@ -166,6 +187,7 @@ tinkeritem 0x097f
 	Name			a frying pan
 	material		10
 	skill		50
+	type			metal
 	stackable		1
 }
 
@@ -173,6 +195,7 @@ tinkeritem 0x0E40
 {
 	Name			a metal chest
 	material		100
+	type			metal
 	skill		85
 	lockable		1
 }
@@ -181,6 +204,7 @@ tinkeritem 0x0E41
 {
 	Name			a metal chest
 	material		100
+	type			metal
 	skill		85
 	lockable		1
 }
@@ -189,6 +213,7 @@ tinkeritem 0x0E80
 {
 	Name			a strongbox
 	material		75
+	type			metal
 	skill		75
 	lockable		1
 }
@@ -197,6 +222,7 @@ tinkeritem 0x10e4
 {
 	name			a draw Knife
 	material		10
+	type			metal
 	skill		40
 }
 
@@ -220,6 +246,7 @@ tinkeritem 0x14FB
 {
 	name			lockpick
 	material		2
+	type			metal
 	skill		50
 	stackable		1
 }
@@ -228,6 +255,7 @@ tinkeritem 0x09ed
 {
 	name			a kettle
 	material		6
+	type			metal
 	skill		40
 }
 
@@ -250,6 +278,7 @@ tinkeritem 0x13f6
 {
 	name			a butcher knife
 	material		10
+	type			metal
 	skill		40
 }
 
@@ -257,6 +286,7 @@ tinkeritem 0x0ec4
 {
 	name			a skinning knife
 	material		10
+	type			metal
 	skill		40
 }
 
@@ -264,6 +294,7 @@ tinkeritem 0x0ec2
 {
 	name			a cleaver
 	material		10
+	type			metal
 	skill		40
 }
 
@@ -271,6 +302,7 @@ tinkeritem 0x0fb4
 {
 	name			a sledge hammer
 	material		10
+	type			metal
 	skill		40
 }
 
@@ -278,6 +310,7 @@ tinkeritem 0x13e3
 {
 	name			a smith's hammer
 	material		10
+	type			metal
 	skill		40
 }
 
@@ -285,6 +318,7 @@ tinkeritem 0x0f43
 {
 	name			a hatchet
 	material		10
+	type			metal
 	skill		40
 }
 
@@ -292,6 +326,7 @@ tinkeritem 0x0e85
 {
 	name			a pickaxe
 	material		10
+	type			metal
 	skill		40
 }
 
@@ -306,6 +341,7 @@ tinkeritem 0x1028
 {
 	name			a dovetail saw
 	material		4 
+	type			metal
 	skill		20
 }
 
@@ -313,6 +349,7 @@ tinkeritem 0x10e5
 {
 	name			a froe
 	material		2 
+	type			metal
 	skill		30
 }
 
@@ -320,6 +357,7 @@ tinkeritem 0x10e6
 {
 	name			an inshave
 	material		2 
+	type			metal
 	skill		15
 }
 
@@ -327,6 +365,7 @@ tinkeritem 0x1034
 {
 	name			a saw
 	material		4 
+	type			metal
 	skill		50
 }
 
@@ -334,6 +373,7 @@ tinkeritem 0x10e7
 {
 	name			a scorp
 	material		2 
+	type			metal
 	skill		30
 }
 
@@ -341,6 +381,7 @@ tinkeritem 0x102a
 {
 	name			a hammer
 	material		4 
+	type			metal
 	skill		50
 }
 
@@ -355,6 +396,7 @@ Item  0x09b3
 {
 	Name			a goblet
 	material		4
+	type			glass
 	skill		50
 }
 
@@ -362,6 +404,7 @@ tinkeritem 0x1f81
 {
 	name			a glass
 	material		4
+	type			glass
 	skill		30
 }
 
@@ -369,6 +412,7 @@ tinkeritem 0x0f0e
 {
 	name			an empty bottle
 	material		2
+	type			glass
 	skill		30
 	stackable		1
 }
@@ -377,6 +421,7 @@ tinkeritem 0x1832
 {
 	name			a flask
 	material		10
+	type			glass
 	skill		50
 }
 
@@ -384,6 +429,7 @@ tinkeritem 0x0e2d
 {
 	name			a crystal ball
 	material		20
+	type			glass
 	skill		70
 }
 
@@ -391,6 +437,7 @@ tinkeritem 0x09A7
 {
 	name			a glass pitcher
 	material		6
+	type			glass
 	skill		30
 }
 
@@ -398,6 +445,7 @@ tinkeritem 0x0f89
 {
 	name			obsidian
 	material		25
+	type			glass
 	skill		90
 	stackable		1
 }
@@ -406,6 +454,7 @@ tinkeritem 0x2fb8
 {
 	name			elven glasses
 	material		20
+	type			glass
 	skill		70
 }
 
@@ -419,6 +468,7 @@ tinkeritem 0x0995
 {
 	name			a mug
 	material		4
+	type			clay
 	skill		12
 }
 
@@ -426,6 +476,7 @@ tinkeritem 0x09d7
 {
 	name			a plate
 	material		8
+	type			clay
 	skill		15
 }
 
@@ -433,6 +484,7 @@ tinkeritem 0x0b46
 {
 	name			a small vase
 	material		10
+	type			clay
 	skill		25
 }
 
@@ -440,6 +492,7 @@ tinkeritem 0x0b48
 {
 	name			a small vase
 	material		10
+	type			clay
 	skill		25
 }
 
@@ -447,6 +500,7 @@ tinkeritem 0x0b45
 {
 	name			a large vase
 	material		20
+	type			clay
 	skill		40
 }
 
@@ -454,6 +508,7 @@ tinkeritem 0x0b47
 {
 	name			a large vase
 	material		20
+	type			clay
 	skill		40
 }
 
@@ -461,6 +516,7 @@ tinkeritem 0x1009
 {
 	name			a basin
 	material		10
+	type			clay
 	skill		15
 }
 
@@ -468,6 +524,7 @@ tinkeritem 0x11c6
 {
 	name			a flowerpot
 	material		10
+	type			clay
 	skill		12
 }
 
@@ -475,6 +532,7 @@ tinkeritem 0x11c7
 {
 	name			a large flowerpot
 	material		20
+	type			clay
 	skill		25
 }
 
@@ -482,6 +540,7 @@ tinkeritem 0x1224
 {
 	name			a statue
 	material		50
+	type			stone
 	skill		50
 }
 
@@ -489,6 +548,7 @@ tinkeritem 0x1225
 {
 	name			a statue
 	material		50
+	type			stone
 	skill		50
 }
 
@@ -496,6 +556,7 @@ tinkeritem 0x1226
 {
 	name			a statue
 	material		50
+	type			stone
 	skill		50
 }
 
@@ -503,6 +564,7 @@ tinkeritem 0x1227
 {
 	name			a statue
 	material		50
+	type			stone
 	skill		50
 }
 
@@ -510,6 +572,7 @@ tinkeritem 0x1228
 {
 	name			a statue
 	material		70
+	type			stone
 	skill		60
 }
 
@@ -517,6 +580,7 @@ tinkeritem 0x12ca
 {
 	name			a bust
 	material		50
+	type			stone
 	skill		45
 }
 
@@ -524,6 +588,7 @@ tinkeritem 0xee21
 {
 	name			porcelain
 	material		25
+	type			clay
 	skill		90
 	stackable		1
 }
@@ -651,6 +716,7 @@ tinkeritem 0x0DF2
 {
 	Name 		wand
 	material		25
+	type			gold
 	skill		75
 }
 
@@ -658,6 +724,7 @@ tinkeritem 0x0DF3
 {
 	Name 		wand
 	material		25
+	type			gold
 	skill		75
 }
 
@@ -665,6 +732,7 @@ tinkeritem 0x0DF4
 {
 	Name			wand
 	material		25
+	type			gold
 	skill		75
 }
 
@@ -672,6 +740,7 @@ tinkeritem 0x0DF5
 {
 	Name			wand
 	material		25
+	type			gold
 	skill		75
 }
 
@@ -679,6 +748,7 @@ tinkeritem 0x1085
 {
 	name			necklace
 	material		8
+	type			gold
 	skill		70
 }
 
@@ -686,6 +756,7 @@ tinkeritem 0x1086
 {
 	name			bracelet
 	material		6
+	type			gold
 	skill		60
 }
 
@@ -693,6 +764,7 @@ tinkeritem 0x1087
 {
 	name			earrings
 	material		4
+	type			gold
 	skill		50
 }
 
@@ -700,6 +772,7 @@ tinkeritem 0x1088
 {
 	name			necklace
 	material		8
+	type			gold
 	skill		70
 }
 
@@ -707,6 +780,7 @@ tinkeritem 0x1089
 {
 	name			necklace
 	material		8
+	type			gold
 	skill		70
 }
 
@@ -714,6 +788,7 @@ tinkeritem 0x108a
 {
 	name			ring
 	material		4
+	type			gold
 	skill		50
 }
 
@@ -750,6 +825,7 @@ tinkeritem 0x2804
 { 
 	Name			dart
 	material		1
+	type			metal
 	skill		20
 	stackable		1
 }
@@ -758,6 +834,16 @@ tinkeritem 0x27ac
 { 
 	Name			shuriken
 	material		1
+	type			metal
+	skill		20
+	stackable		1
+}
+
+tinkeritem 0x255d
+{ 
+	Name			throwing axe
+	material		1
+	type			metal
 	skill		20
 	stackable		1
 }
