--- a/trunk/099/pkg/skills/craftingskills/woodworking/config/CarpMenu.cfg
+++ b/trunk/099/pkg/skills/craftingskills/woodworking/config/CarpMenu.cfg
@@ -26,7 +26,7 @@
 Craftitem Index
 {
 	//Index Menus
-	Title	<center>Carpentry Selection Menu</center>
+	Title	Carpentry Selection Menu
 	Skill	Carpentry
 	SkillID	Carpentry
 
